# MdsCode_Bash

./: .gitignore  .gitmodules  README.md  mdscode
configs/: configure.in
res/include/: cpp_debug.hpp
res/templates/: default.cpp  default.java
src/: args_flags.sh  common.sh  compile_and_exec.sh  configs.sh  execution_flow.sh  file_creation.sh  guimode.sh  interactive_mode.sh  main_flow.sh  mds-prompt  online_judge.sh  parser.sh  submit.sh  testing.sh
src/gui/: guicpp.sh  guijava.sh  guitests.sh  guiutils.sh
src/judges/: aceptaelreto.sh  uva.sh
test/: mdscode_tests.sh
test/unit/: helper_functions.sh  test_common.sh  test_compile.sh  test_file_creation.sh
test/unit/online_judge/: test_acepta_el_reto.sh  test_uva.sh
test/unit/online_judge/assets/: Tomas_Ineditas_463.cpp.input  Tomas_Ineditas_463.cpp.output
