# If you want to customize the configs, export the desire config variable to overwrite it
# Example: export EDITOR_COMMAND=vim {{FILE}}
EDITOR_COMMAND=vim --servername /tmp/mdssocket --remote-silent {{FILE}}
EDITOR_SPLIT_COMMAND=vim -O2 {{FILE1}} {{FILE2}}
# FILE1 -> EXPECTED OUTPUT, FILE2 -> ACTUAL OUTPUT, FILE3 -> INPUT
EDITOR_DIFF_COMMAND=vim -c "b 1 | set nosplitright | vsplit {{FILE3}} | execute \\"normal \\<C-w>K\\" | resize -10" -d {{FILE1}} {{FILE2}}
OPEN_WITH_EDITOR=YES
VIM_SERVERNAME=/tmp/mdssocket
# values: UCWORDS, UPPERCASE, LOWERCASE
CASETYPE=UCWORDS
WHITESPACE_REPLACE=_
DEFAULT_FILETYPE=cpp
PROBLEM_ID_AT_END=YES
# C++ configs
CXXCOMPILER=g++
CXX_STANDARD=-std=c++17
CXX_FLAGS=-O0 -Wall -Wextra -g -fsanitize=address -D__MDS_DEBUG__
CXX_AVAILABLE_FLAGS=-O0 -O2 -O3 -Wall -pipe -pthread -Wextra -g \
    -fsanitize=undefined -fsanitize=float-cast-overflow -fsanitize=address\
    -fsanitize=leak -D__MDS_DEBUG__
CCCOMPILER=gcc
CC_FLAGS=-Wall -Wextra -g
PYTHON_BIN=python3

# Java configs
JAVA_COMPILER=javac
JAVA_EXEC=java
JAVA_HOME=

# For uva judge online submission timestamps
UVA_TIMEZONE=Iceland

# Days before deleting build and test data
DAYS_BEFORE_DELETION=180
